# nb_cache

./: LICENSE  README.md  nb_cache_all_docs_and_codes.md  pyproject.toml
examples/: ex1.py
nb_cache/: __init__.py  _compat.py  condition.py  exceptions.py  helpers.py  key.py  middleware.py  serialize.py  tags.py  transaction.py  ttl.py  wrapper.py
nb_cache/backends/: __init__.py  base.py  dual.py  memory.py  redis.py
nb_cache/decorators/: __init__.py  bloom.py  cache.py  circuit_breaker.py  early.py  failover.py  hit.py  iterator.py  locked.py  rate_limit.py  soft.py
tests/ai_codes/: test_core.py  test_global_default_backend.py
tests/mds_for_ai/: for_ai.md  for_ai_持续优化.md
tests/my_tests/: t_circuit_breaker.py  t_rate_limit.py  test_key.py
tests/some_mds/: 临时粘贴.md
