[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nb_cache"
version = "0.4"
description = "`nb_cache` 不仅是一个基础的缓存装饰器，它在彻底抹平 Python 同步与异步代码差异的同时，开箱即用地提供了内存/Redis双层缓存、防击穿、防雪崩、限流与熔断等企业级高可用特性。"
readme = "README.md"
# license = {text = "MIT"}
requires-python = ">=3.6"
authors = [
    {name = "ydf0509"},
]
keywords = ["cache", "redis", "memory", "async", "decorator", "lock"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    # "Topic :: System :: Caching",
]

[project.optional-dependencies]
redis = ["redis>=3.0"]
speedup = ["xxhash", "hiredis"]
all = ["redis>=3.0", "xxhash", "hiredis"]

[project.urls]
Homepage = "https://github.com/ydf0509/nb_cache"
Repository = "https://github.com/ydf0509/nb_cache"

[tool.setuptools.packages.find]
include = ["nb_cache*"]
exclude = ["tests*", "cashews*"]

[tool.setuptools]
license-files = []



# python -m build && twine upload dist/*